kube-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: words-db-svc
  labels:
    app: words-db
spec:
  ports:
    - port: 5432
      targetPort: 5432
      name: words-db
  selector:
    app: words-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: words-db-deploy
  labels:
    app: words-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: words-db
  template:
    metadata:
      labels:
        app: words-db
    spec:
      containers:
      - name: db
        image: quay.io/garycncf/words-demo-db:version2
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
          name: db
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
      securityContext:
        runAsUser: 0
      volumes:
      - name: db-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: words-api-svc
  labels:
    app: words-api
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: words-api
  selector:
    app: words-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: words-api-deploy
  labels:
    app: words-api
spec:
  replicas: 5
  selector:
    matchLabels:
      app: words-api
  template:
    metadata:
      labels:
        app: words-api
    spec:
      containers:
      - name: api
        image: quay.io/garycncf/words-demo-api:version2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: api
---
apiVersion: v1
kind: Service
metadata:
  name: words-web-svc
  labels:
    app: words-web
spec:
  ports:
    - port: 80
      targetPort: 80
      name: words-web
  selector:
    app: words-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: words-web-deploy
  labels:
    app: words-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: words-web
  template:
    metadata:
      labels:
        app: words-web
    spec:
      containers:
      - name: words-web
        image: quay.io/garycncf/words-demo-web:version2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: words-web
      securityContext:
        runAsUser: 0
